# HGSOC_platinum_response

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  TCGA_train_HGSOC_test.sh  heatmap.sh  pyproject.toml  run.sh  setup_general.sh
CLAM/: .gitignore  WSI_to_patch_bags.py  check_model_sizes.ipynb  create_heatmaps.py  create_heatmaps_factorized.py  create_patches_fp.py  create_splits_seq.py  eval.py  extract_features_fp.py  get_visual_samples.py  inference.py  main.py  normalizeStaining.py  patch_and_embed.sh
CLAM/datasets/: dataset_generic.py  dataset_h5.py
CLAM/models/: CTransPath.py  Ov_ViT.py  dino_vit.py  kimianet.py  model_SurvPath.py  model_clam.py  model_coattn.py  model_coattn_reduced.py  model_porpoise.py  multimodal.py  resnet_custom.py  ssl_vit.py
CLAM/utils/: core_utils.py  eval_utils.py  file_utils.py  utils.py
CLAM/vis_utils/: heatmap_utils.py
HGSOC_platinum_responce/: HGSOC_TCGA_tasks_data_setup.py  HRD_results_analysis.ipynb  classical_models_omics.py  classical_results.json  classical_results_stratified.json  create_main_tables.py  omics_structures_options.ipynb  proteomics_combinations.json  proteomics_inspection.ipynb  results_to_tables.py  results_to_tables_sifting.py  statistical_tests.py  vis_multi_heatmaps.ipynb
Set-Tree/: Attention_RF.py  RF_MIL_WSI.ipynb  example.ipynb
bash_scripts/: HGSOC_train_TCGA_test.sh  HGSOC_train_TCGA_test_multimodals.sh  bulk_ovarian_patching.sh  chowdry_SurvPath.sh  create_splits.sh  create_train_brca.sh  eval.sh  runs.sh  runs_WSI_baselines.sh  setup_general.sh  train.sh  visualize_patches.sh
(+224 files in other folders)
