[tool.poetry]
name = "brca"
version = "0.1.0"
description = ""
authors = ["Olar Alex <olaralex666@gmail.com>"]
readme = "README.md"
packages = [
    { include = 'topk' }
]

[tool.poetry.dependencies]
python = "<3.13,>=3.9"
numpy = "^1.26.0"
pandas = "^2.1.1"
matplotlib = "^3.8.0"
jupyter = "^1.0.0"
h5py = "^3.9.0"
pillow = "^10.0.1"
scikit-image = "^0.21.0"
scikit-learn = "^1.3.1"
omegaconf = "^2.3.0"
tqdm = "^4.64.1"
torch = { version = "1.13.1+cu117", source="torch"}
torchvision = { version = "0.14.1+cu117", source = "torch" }
wandb = "^0.13.7"
tensorboard = "^2.13.0"
tensorboardx = "^2.6.2.2"
topk = {path = "topk/dist/topk-1.0-py3-none-any.whl"}
future = "^0.18.3"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu117"
secondary = true
default = false

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.4.0"
build = "^1.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
